--- a/posts/templates/posts/show.html
+++ b/posts/templates/posts/show.html
@@ -15,7 +15,7 @@
     <hr>
 
     {% for b in blog %}
-    <div class="container bg-light mb-5 blog">
+    <div class="container bg-light shadow-lg mb-5 blog">
         <div class="row align-items-center detail">
              <div class="col-9">
                  <h2>{{ b.subject}}</h2><br>
