--- a/posts/templates/posts/layout.html
+++ b/posts/templates/posts/layout.html
@@ -27,7 +27,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -37,6 +37,10 @@
             <a class="nav-link" href="{% url 'show' %}">Posts</a>
           </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </div>
       
     </nav>
